--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
@@ -34,6 +35,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation 'id.zelory:compressor:2.1.0'
 
@@ -43,6 +45,9 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.labo.kaji:fragmentanimations:0.1.1'
+
+    implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
+
 
 
 }
