--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:screenOrientation="portrait" />
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            />
         <activity android:name=".RegisterActivity" />
 
 
@@ -39,6 +40,9 @@
 
         </activity>
         <activity android:name=".SetupActivity"/>
+        <!--<meta-data-->
+            <!--android:name="com.facebook.sdk.ApplicationId"-->
+            <!--android:value="@string/facebook_app_id" />-->
     </application>
 
 </manifest>
