--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
+
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation 'id.zelory:compressor:2.1.0'
@@ -45,10 +48,11 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.labo.kaji:fragmentanimations:0.1.1'
+    implementation "com.google.firebase:firebase-database:12.0.1"
 
-    implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
-
-
+    //para usar o facebook sdk
+    implementation 'com.facebook.android:facebook-android-sdk:4.13.2'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
 }
 
