--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,25 +24,17 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            />
+            android:screenOrientation="portrait" />
         <activity android:name=".RegisterActivity" />
-
-
+        <activity android:name=".SetupActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-        <activity
-            android:name=".NewPostActivity"
-            android:parentActivityName=".MainActivity" />
+
         <activity android:name=".CommentsActivity"
             android:parentActivityName=".MainActivity">
 
         </activity>
-        <activity android:name=".SetupActivity"/>
-        <!--<meta-data-->
-            <!--android:name="com.facebook.sdk.ApplicationId"-->
-            <!--android:value="@string/facebook_app_id" />-->
     </application>
 
 </manifest>
